chore: code and documentation cleanup