@@ -1,5 +1,6 @@
 package org.soliscode.test.util;
 
+import org.jspecify.annotations.NonNull;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.soliscode.test.AbstractTest;
@@ -14,6 +15,7 @@ import static org.junit.jupiter.api.Assertions.*;
 /// @author evanbergstrom
 /// @since 1.0
 /// @see IdentitySet
+@SuppressWarnings("ConstantValue")
 @DisplayName("Tests for IdentitySet")
 public class IdentitySetTest extends AbstractTest {
 
@@ -24,7 +26,7 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test default constructor")
     public void testDefaultConstructor() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         assertNotNull(set);
         assertEquals(0, set.size());
         assertTrue(set.isEmpty());
@@ -36,7 +38,7 @@ public class IdentitySetTest extends AbstractTest {
     public void testCopyConstructorWithEmptyCollection() {
         List<String> emptyList = new ArrayList<>();
         IdentitySet<String> set = new IdentitySet<>(emptyList);
-        
+
         assertEquals(0, set.size());
         assertTrue(set.isEmpty());
     }
@@ -48,9 +50,9 @@ public class IdentitySetTest extends AbstractTest {
         String str1 = "hello";
         String str2 = "world";
         List<String> list = Arrays.asList(str1, str2);
-        
+
         IdentitySet<String> set = new IdentitySet<>(list);
-        
+
         assertEquals(2, set.size());
         assertTrue(set.contains(str1));
         assertTrue(set.contains(str2));
@@ -62,9 +64,9 @@ public class IdentitySetTest extends AbstractTest {
     public void testCopyConstructorWithDuplicateReferences() {
         String str = "test";
         List<String> list = Arrays.asList(str, str, str); // Same reference three times
-        
+
         IdentitySet<String> set = new IdentitySet<>(list);
-        
+
         // Should have only one element since it's the same reference
         assertEquals(1, set.size());
         assertTrue(set.contains(str));
@@ -74,16 +76,16 @@ public class IdentitySetTest extends AbstractTest {
     @Test
     @DisplayName("Test copy constructor with equal but different objects")
     public void testCopyConstructorWithEqualButDifferentObjects() {
-        String str1 = new String("test");
-        String str2 = new String("test");
+        String str1 = "test";
+        String str2 = "test";
         List<String> list = Arrays.asList(str1, str2);
-        
+
         // Verify they are equal but not the same reference
         assertEquals(str1, str2);
         assertNotSame(str1, str2);
-        
+
         IdentitySet<String> set = new IdentitySet<>(list);
-        
+
         // Should have two elements since they are different references
         assertEquals(2, set.size());
         assertTrue(set.contains(str1));
@@ -98,9 +100,9 @@ public class IdentitySetTest extends AbstractTest {
     public void testAdd() {
         IdentitySet<String> set = new IdentitySet<>();
         String str = "test";
-        
+
         boolean result = set.add(str);
-        
+
         assertTrue(result); // IdentitySet.add() always returns true
         assertEquals(1, set.size());
         assertTrue(set.contains(str));
@@ -112,16 +114,16 @@ public class IdentitySetTest extends AbstractTest {
     public void testAddSameReferenceMultipleTimes() {
         IdentitySet<String> set = new IdentitySet<>();
         String str = "test";
-        
+
         boolean result1 = set.add(str);
         boolean result2 = set.add(str);
         boolean result3 = set.add(str);
-        
+
         // All should return true (implementation detail of IdentitySet.add())
         assertTrue(result1);
         assertTrue(result2);
         assertTrue(result3);
-        
+
         // But size should remain 1 since it's the same reference
         assertEquals(1, set.size());
         assertTrue(set.contains(str));
@@ -132,16 +134,16 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test add equal but different objects")
     public void testAddEqualButDifferentObjects() {
         IdentitySet<String> set = new IdentitySet<>();
-        String str1 = new String("test");
-        String str2 = new String("test");
-        
+        String str1 = "test";
+        String str2 = "test";
+
         // Verify they are equal but not the same reference
         assertEquals(str1, str2);
         assertNotSame(str1, str2);
-        
+
         set.add(str1);
         set.add(str2);
-        
+
         // Should have two elements since they are different references
         assertEquals(2, set.size());
         assertTrue(set.contains(str1));
@@ -154,9 +156,9 @@ public class IdentitySetTest extends AbstractTest {
     public void testContains() {
         IdentitySet<String> set = new IdentitySet<>();
         String str = "test";
-        
+
         assertFalse(set.contains(str));
-        
+
         set.add(str);
         assertTrue(set.contains(str));
     }
@@ -166,15 +168,15 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test contains with equal but different objects")
     public void testContainsWithEqualButDifferentObjects() {
         IdentitySet<String> set = new IdentitySet<>();
-        String str1 = new String("test");
-        String str2 = new String("test");
-        
+        String str1 = "test";
+        String str2 = "test";
+
         // Verify they are equal but not the same reference
         assertEquals(str1, str2);
         assertNotSame(str1, str2);
-        
+
         set.add(str1);
-        
+
         // Should contain str1 but not str2 (different reference)
         assertTrue(set.contains(str1));
         assertFalse(set.contains(str2));
@@ -186,11 +188,11 @@ public class IdentitySetTest extends AbstractTest {
     public void testRemove() {
         IdentitySet<String> set = new IdentitySet<>();
         String str = "test";
-        
+
         // Remove from empty set - should return true (bug in IdentitySet implementation)
         boolean result1 = set.remove(str);
         assertTrue(result1); // The implementation incorrectly returns true when element is not found
-        
+
         // Add and then remove
         set.add(str);
         boolean result2 = set.remove(str);
@@ -204,21 +206,21 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test remove with equal but different objects")
     public void testRemoveWithEqualButDifferentObjects() {
         IdentitySet<String> set = new IdentitySet<>();
-        String str1 = new String("test");
-        String str2 = new String("test");
-        
+        String str1 = "test";
+        String str2 = "test";
+
         // Verify they are equal but not the same reference
         assertEquals(str1, str2);
         assertNotSame(str1, str2);
-        
+
         set.add(str1);
-        
+
         // Should not be able to remove str2 (different reference) but returns true due to bug
         boolean result = set.remove(str2);
         assertTrue(result); // Bug: IdentitySet.remove() always returns true
         assertEquals(1, set.size()); // But the size should remain unchanged
         assertTrue(set.contains(str1)); // And the element should still be there
-        
+
         // But should be able to remove str1
         boolean result2 = set.remove(str1);
         assertTrue(result2);
@@ -230,21 +232,21 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test size operation")
     public void testSize() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         assertEquals(0, set.size());
-        
+
         String str1 = "test1";
         String str2 = "test2";
-        
+
         set.add(str1);
         assertEquals(1, set.size());
-        
+
         set.add(str2);
         assertEquals(2, set.size());
-        
+
         set.remove(str1);
         assertEquals(1, set.size());
-        
+
         set.remove(str2);
         assertEquals(0, set.size());
     }
@@ -259,19 +261,19 @@ public class IdentitySetTest extends AbstractTest {
         String str1 = "test1";
         String str2 = "test2";
         String str3 = "test3";
-        
+
         set.add(str1);
         set.add(str2);
         set.add(str3);
-        
+
         Iterator<String> iterator = set.iterator();
         assertNotNull(iterator);
-        
+
         Set<String> iteratedElements = new HashSet<>();
         while (iterator.hasNext()) {
             iteratedElements.add(iterator.next());
         }
-        
+
         assertEquals(3, iteratedElements.size());
         assertTrue(iteratedElements.contains(str1));
         assertTrue(iteratedElements.contains(str2));
@@ -284,7 +286,7 @@ public class IdentitySetTest extends AbstractTest {
     public void testIteratorWithEmptySet() {
         IdentitySet<String> set = new IdentitySet<>();
         Iterator<String> iterator = set.iterator();
-        
+
         assertNotNull(iterator);
         assertFalse(iterator.hasNext());
     }
@@ -296,12 +298,12 @@ public class IdentitySetTest extends AbstractTest {
         IdentitySet<String> set = new IdentitySet<>();
         String str1 = "test1";
         String str2 = "test2";
-        
+
         set.add(str1);
         set.add(str2);
-        
+
         Iterator<String> iterator = set.iterator();
-        
+
         // IdentityHashMap's iterator is fail-fast and throws ConcurrentModificationException
         assertThrows(ConcurrentModificationException.class, () -> {
             iterator.hasNext();
@@ -319,19 +321,19 @@ public class IdentitySetTest extends AbstractTest {
         IdentitySet<MatchNothing> set = new IdentitySet<>();
         MatchNothing obj1 = new MatchNothing();
         MatchNothing obj2 = new MatchNothing();
-        
+
         // MatchNothing objects never equal each other
-        assertFalse(obj1.equals(obj2));
-        assertFalse(obj1.equals(obj1)); // Even itself!
-        
+        assertNotEquals(obj1, obj2);
+        assertNotEquals(obj1, obj1); // Even itself!
+
         set.add(obj1);
         set.add(obj2);
-        
+
         // Both should be in the set since identity is different
         assertEquals(2, set.size());
         assertTrue(set.contains(obj1));
         assertTrue(set.contains(obj2));
-        
+
         // Should be able to remove by identity
         assertTrue(set.remove(obj1));
         assertEquals(1, set.size());
@@ -346,14 +348,14 @@ public class IdentitySetTest extends AbstractTest {
         IdentitySet<MatchEverything> set = new IdentitySet<>();
         MatchEverything obj1 = new MatchEverything();
         MatchEverything obj2 = new MatchEverything();
-        
+
         // MatchEverything objects always equal each other
-        assertTrue(obj1.equals(obj2));
-        assertTrue(obj1.equals(obj1));
-        
+        assertEquals(obj1, obj2);
+        assertEquals(obj1, obj1);
+
         set.add(obj1);
         set.add(obj2);
-        
+
         // Both should be in the set since identity is different, despite being "equal"
         assertEquals(2, set.size());
         assertTrue(set.contains(obj1));
@@ -364,19 +366,19 @@ public class IdentitySetTest extends AbstractTest {
     @Test
     @DisplayName("Test comparison with regular HashSet behavior")
     public void testComparisonWithRegularHashSet() {
-        String str1 = new String("test");
-        String str2 = new String("test");
-        
+        String str1 = "test";
+        String str2 = "test";
+
         // Verify they are equal but not the same reference
         assertEquals(str1, str2);
         assertNotSame(str1, str2);
-        
+
         // IdentitySet behavior
         IdentitySet<String> identitySet = new IdentitySet<>();
         identitySet.add(str1);
         identitySet.add(str2);
         assertEquals(2, identitySet.size()); // Both added due to different identity
-        
+
         // Regular HashSet behavior
         Set<String> hashSet = new HashSet<>();
         hashSet.add(str1);
@@ -391,16 +393,16 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test null handling")
     public void testNullHandling() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         // Add null
         set.add(null);
         assertEquals(1, set.size());
         assertTrue(set.contains(null));
-        
+
         // Add null again
         set.add(null);
         assertEquals(1, set.size()); // Should still be 1
-        
+
         // Remove null
         boolean result = set.remove(null);
         assertTrue(result);
@@ -413,11 +415,11 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test multiple null references")
     public void testMultipleNullReferences() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         set.add(null);
         set.add(null);
         set.add(null);
-        
+
         // Should only have one null since all null references are identical
         assertEquals(1, set.size());
         assertTrue(set.contains(null));
@@ -430,19 +432,19 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test with different numeric objects")
     public void testWithDifferentNumericObjects() {
         IdentitySet<Integer> set = new IdentitySet<>();
-        
+
         // Create Integer objects that are definitely different references
-        Integer int1 = Integer.valueOf(1000); // Not cached
-        Integer int2 = Integer.valueOf(1001); // Not cached  
-        Integer int3 = Integer.valueOf(42);   // May be cached
-        
+        Integer int1 = 1000; // Not cached
+        Integer int2 = 1001; // Not cached
+        Integer int3 = 42;   // May be cached
+
         set.add(int1);
         set.add(int2);
         set.add(int3);
-        
+
         // Should have 3 different integers
         assertEquals(3, set.size());
-        
+
         assertTrue(set.contains(int1));
         assertTrue(set.contains(int2));
         assertTrue(set.contains(int3));
@@ -453,20 +455,20 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test with collections containing same objects")
     public void testWithCollectionsContainingSameObjects() {
         String str = "shared";
-        List<String> list1 = Arrays.asList(str);
-        List<String> list2 = Arrays.asList(str);
-        
+        List<String> list1 = List.of(str);
+        List<String> list2 = List.of(str);
+
         IdentitySet<List<String>> set = new IdentitySet<>();
         set.add(list1);
         set.add(list2);
-        
+
         // Should have two entries since lists are different objects
         assertEquals(2, set.size());
         assertTrue(set.contains(list1));
         assertTrue(set.contains(list2));
-        
+
         // But the string inside is the same reference
-        assertSame(list1.get(0), list2.get(0));
+        assertSame(list1.getFirst(), list2.getFirst());
     }
 
     /// Test large number of objects.
@@ -475,26 +477,26 @@ public class IdentitySetTest extends AbstractTest {
     public void testWithLargeNumberOfObjects() {
         IdentitySet<String> set = new IdentitySet<>();
         List<String> strings = new ArrayList<>();
-        
+
         // Create many different string objects
         for (int i = 0; i < 1000; i++) {
-            String str = new String("test" + i);
+            String str = "test" + i;
             strings.add(str);
             set.add(str);
         }
-        
+
         assertEquals(1000, set.size());
-        
+
         // All should be contained
         for (String str : strings) {
             assertTrue(set.contains(str));
         }
-        
+
         // Remove half of them
         for (int i = 0; i < 500; i++) {
             assertTrue(set.remove(strings.get(i)));
         }
-        
+
         assertEquals(500, set.size());
     }
 
@@ -503,13 +505,13 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test AbstractSet inherited methods")
     public void testAbstractSetInheritedMethods() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         // Test isEmpty
         assertTrue(set.isEmpty());
-        
+
         set.add("test");
         assertFalse(set.isEmpty());
-        
+
         // Test clear (inherited from AbstractCollection)
         set.clear();
         assertTrue(set.isEmpty());
@@ -521,49 +523,36 @@ public class IdentitySetTest extends AbstractTest {
     @DisplayName("Test Set interface compliance")
     public void testSetInterfaceCompliance() {
         IdentitySet<String> set = new IdentitySet<>();
-        
+
         // Verify it implements Set
         assertInstanceOf(Set.class, set);
         assertInstanceOf(Collection.class, set);
         assertInstanceOf(Iterable.class, set);
-        
+
         // Test toArray
         String str1 = "test1";
         String str2 = "test2";
         set.add(str1);
         set.add(str2);
-        
-        Object[] array = set.toArray();
-        assertEquals(2, array.length);
-        
-        String[] stringArray = set.toArray(new String[0]);
-        assertEquals(2, stringArray.length);
+
+        assertEquals(2, set.toArray().length);
+
+        assertEquals(2, set.toArray(new String[0]).length);
     }
 
     // Helper classes for testing
 
-    private static class TestObject {
-        private final String value;
-        
-        TestObject(String value) {
-            this.value = value;
-        }
-        
+    private record TestObject(String value) {
+
         @Override
         public boolean equals(Object obj) {
             if (this == obj) return true;
-            if (!(obj instanceof TestObject)) return false;
-            TestObject other = (TestObject) obj;
-            return Objects.equals(value, other.value);
+            if (!(obj instanceof TestObject(String value1))) return false;
+            return Objects.equals(value, value1);
         }
-        
+
         @Override
-        public int hashCode() {
-            return Objects.hash(value);
-        }
-        
-        @Override
-        public String toString() {
+        public @NonNull String toString() {
             return "TestObject{" + value + "}";
         }
     }
